Fix info width on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ body.modal-open {
     min-width: 300px;
     width: auto;
     min-height: 375px;
-    height: auto ;
+    height: auto;
     border: 5px solid orange;
     background-color: rgba(0, 0, 0, .9);
     border-radius: 12px;
@@ -235,7 +235,7 @@ body.modal-open {
     text-align: center;
     padding: 5px;
     box-shadow: 5px 5px black;
-    width: 18vh;
+    width: 16vw;
     height: auto;
 }
 
@@ -355,10 +355,12 @@ div.card {
 .overlay-text {
     display: none;
     position: fixed;
-    top: 20%;
-    left: 20%;
-    right: 20%;
-    bottom: 20%;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     justify-content: center;
     align-items: center;
     z-index: 100;
@@ -369,6 +371,7 @@ div.card {
     text-align: center;
     padding: 20px;
     border-radius: 12px;
+    margin: 0;
 }
 
 .overlay-text i {
@@ -418,6 +421,10 @@ div.card {
         font-size: .1em;
     }
 
+    .game-info {
+        width: auto;
+    }
+
 }
 
 @media (max-width: 400px) {
@@ -436,6 +443,10 @@ div.card {
     .game-info-container {
         flex-direction: column;
         align-items: center;
+    }
+
+    .game-info {
+        width: auto;
     }
 
     /*--- Overlays ---*/
